--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+
+
 body {
     font-family: "IBM Plex Mono";
     font-size: 0.75rem;
@@ -13,11 +15,22 @@ body {
 
 a {
     text-decoration: none;
+    color: #0e1fb5;
 }
 
 a:visited {
     color: black;
+    /* background-color: #d6fa5a50; */
+ } 
+
+.code mark {
+    background-color: transparent;
 }
+
+.code mark:hover {
+    background-color: #d6fa5a;
+}
+
 
 h1 {
     color: white;
@@ -37,13 +50,14 @@ h1 {
 /* XP TABLE BROAD */
 
 #xp_table {
-    width: 78%;
+    width: 80%;
 }
 
 #xp_table #xp_line {
     display: flex;
     justify-content: left;
 }
+
 
 /* CATEGORIES */
 
@@ -79,19 +93,31 @@ h1 {
 /* XP TABLE SUB CATEGORIES */
 
 .audio mark {
-    background-color: #0e1fb5;
+    background-color: #f3c4ac;
+}
+
+.data mark {
+    background-color: #afc5e0;
+}
+
+.publication mark {
+    background-color: #d6d6d6;
+}
+
+.project mark {
+    background-color: #b7d9b4;
 }
 
 /* INFO TABLE */
 
 #info_table {
-    position: fixed;
-    right: 0;
+    /* position: fixed;
+    right: 0; */
     background-color: #0e1fb5;
     background-image: radial-gradient(#d6fa5a 20%, #0e1fb5, #0e1fb5 80%);
     /* background-image: radial-gradient(closest-corner at 20% 80%, #d6fa5a, #0e1fb5, #0e1fb5); */
     width: 20%;
-    height: 100vh;
+    height: 100%;
 
 }
 
