--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,14 @@ body {
 
     min-height: 100vh;
     display: flex;
-    flex-direction: row;
-    /* flex: 1; */
     justify-content: space-between;
+}
+
+@media (max-width: 1200px) {
+    body {
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
 }
 
 ul {
@@ -46,6 +51,7 @@ h1 {
     font-size: 0.9rem;
     font-weight: 900;
 }
+
 /* GROUPINGS */
 
 #xp_table,
@@ -57,7 +63,9 @@ h1 {
 /* XP TABLE BROAD */
 
 #xp_table {
-    width: 80%;
+    flex-shrink: 0;
+
+    /* width: 80%; */
 }
 
 #xp_table #xp_line {
@@ -70,12 +78,14 @@ h1 {
 
 #xp_table #xp_line .code {
     width: 10%;
+    min-width: 55px;
     /* background-color: wheat; */
 }
 
 #xp_table #xp_line .year {
     text-align: left;
     width: 5%;
+    min-width: 45px;
     /* background-color: tomato; */
 }
 
@@ -88,11 +98,13 @@ h1 {
 #xp_table #xp_line .org {
     text-align: right;
     width: 20%;
+    min-width: 100px;
     /* background-color: aquamarine; */
 }
 
 #xp_table #xp_line .category {
     width: 15%;
+    min-width: 65px;
     text-align: end;
     /* background-color: brown; */
 }
@@ -128,17 +140,17 @@ h1 {
 /* INFO TABLE */
 
 #info_table {
-    /* position: fixed;
-    right: 0; */
-    /* background-color: #0e1fb5; */
     background-image: radial-gradient(#d6fa5a 20%, #0e1fb5, #0e1fb5 80%);
-    /* background-image: radial-gradient(closest-corner at 20% 80%, #d6fa5a, #0e1fb5, #0e1fb5); */
-    width: 20%;
+    flex-shrink: 1;
+    /* flex-basis: auto; */
     min-height: 100%;
+    /* max-width: 20%; */
+    padding-bottom: 20px;
 
 }
 
-#info_table p, li {
+#info_table p,
+li {
     color: white;
     text-align: justify;
 }
@@ -146,10 +158,4 @@ h1 {
 #info_table a {
     color: black;
     background-color: #d6fa5a;
-}
-
-
-
-#info_table .experience {
-    text-align: left;
 }
