MIRACOLO the minor adjustments worked and now it is not an abomination and can be viewed on the phone

--- a/styles.css
+++ b/styles.css
@@ -187,9 +187,12 @@ li {
     }
 
     #xp_table {
+        box-sizing: border-box;
         width: 100%;
         min-width: 0;
         max-width: 100%;
+        padding: 10px;
+        margin: 0;
     }
 
     #xp_line {
